--- a/comments.html
+++ b/comments.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="css/style_send_form.css">
     <link rel="stylesheet" href="css/style_garantiya.css">
     <link rel="stylesheet" href="css/style_footer.css">
+    <link rel="stylesheet" href="css/style_comments.css">
 </head>
 <body>
 
@@ -46,12 +47,11 @@
                         <img src="img/logo.jpg" width="60px" height="60px" alt="Логотип сайта">
                         <span class="navbar-title" style="color:  rgb(255, 109, 0);" >ДЕЗСАН</span>
                     </a>
-
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedo" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
 
-                    <div class="collapse navbar-collapse navbar-collapse-without-width100" id="navbarSupportedContent">
+                    <div class="collapse navbar-collapse navbar-collapse-without-width100" id="navbarNav">
                         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                             <div class="dropdown">
                                 <a class="dropbtn nav-link dropdown-toggle nav-link-text" href="dezincekciya.html">Дезинсекция</a>
@@ -101,35 +101,6 @@
                             <li class="nav-item">
                                 <a class="nav-link nav-link-text" href="contacts.html">Контакты</a>
                             </li>
-                            <!-- <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle nav-link-text" href="dezincekciya.html" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Дезинсекция</a>
-                                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                    <li><a class="dropdown-item" href="dezincekciya/clop.html">Клопы</a></li>
-                                    <li><a class="dropdown-item" href="dezincekciya/tarakan.html">Тараканы</a></li>
-                                    <li><a class="dropdown-item" href="dezincekciya/komary.html">Комары</a></li>
-                                    <li><a class="dropdown-item" href="dezincekciya/osi.html">Осы</a></li>
-                                    <li><a class="dropdown-item" href="dezincekciya/kleshhi.html">Клещи</a></li>
-                                    <li><a class="dropdown-item" href="dezincekciya/bloh.html">Блохи</a></li>
-                                    <li><a class="dropdown-item" href="dezincekciya/muraviyi.html">Муравьи</a></li>
-                                    <li><a class="dropdown-item" href="dezincekciya/myhi.html">Мухи</a></li>
-                                </ul>
-                            </li>
-                            <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle nav-link-text" href="deratizaciya.html" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Дератизация</a>
-                                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                    <li><a class="dropdown-item" href="deratizaciya/krisa.html">Крысы</a></li>
-                                    <li><a class="dropdown-item" href="deratizaciya/krot.html">Кроты</a></li>
-                                    <li><a class="dropdown-item" href="deratizaciya/maus.html">Мыши</a></li>
-                                </ul>
-                            </li> 
-                            <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle nav-link-text" href="desinphekciya.html" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Дезинфекция</a>
-                                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                    <li><a class="dropdown-item" href="desinphekciya/grib.html">Грибы</a></li>
-                                    <li><a class="dropdown-item" href="desinphekciya/plesen.html">Плесень</a></li>
-                                    <li><a class="dropdown-item" href="desinphekciya/virus.html">Вирус</a></li>
-                                </ul>
-                            </li> -->
                         </ul>
                     </div>
 
@@ -139,8 +110,52 @@
     </div>
     <!-- КОНЕЦ -->
 
-
-
+    <!-- Отзывы -->
+    <!-- НАЧАЛО -->
+    <div class="container mt-3 mb-3 ">
+        <div class="block_one_comment">
+            <p class="name_and_adress"><strong>Лилия</strong>, Харьков</p>
+            <p class="text_comment">Большое спасибо специалистам службы!
+                Только благодаря этой компании удалось избавиться от клопов в квартире. С ними после первой обработки все сработало.
+            </p>
+        </div>
+        <div class="block_one_comment">
+            <p class="name_and_adress"><strong>Владимир</strong>, Киев</p>
+            <p class="text_comment">У нас на территории ресторации (летняя зона отдыха) несколько раз посетителей пугали змеи. Нам порекомендовали обратиться в компанию ДЕЗСАН – надежная компания в решении такой опасной проблемы. Приехали специалисты оперативно , отловили 3 гадюки, провели обработку территории от проникновения змей. Весь весенне-летний сезон нас змеи не беспокоили.
+                Будем обращаться и рекомендовать компанию ДЕЗСАН!
+            </p>
+        </div>
+        <div class="block_one_comment">
+            <p class="name_and_adress"><strong>Дмитрий</strong>, п.Печенеги, Харьковская область</p>
+            <p class="text_comment">Заказал в ДЕЗСАН обработку от жука кароеда. Ребята провели фумигацию дома внутри и обработали дом снаружи, быстро и качественно. Проблему решили за 7 дней! 
+            Благодарен!                
+            </p>
+        </div>
+        <div class="block_one_comment">
+            <p class="name_and_adress"><strong>Андрей</strong>, Харьков</p>
+            <p class="text_comment">Сотрудники ДЕЗСАН настоящие профессионалы, оперативно и по доступной цене провели у меня в квартире дезинсекцию от тараканов. Уничтожили всех насекомых.
+            Рекомендую!
+            </p>
+        </div>
+        <div class="block_one_comment">
+            <p class="name_and_adress"><strong>Виктория</strong>, Харьков</p>
+            <p class="text_comment">Заказывали обработку складского помещения от крыс около 2-х месяцев назад. По настоящее время крыс не видно. Работой компании ДЕЗСАН остались довольны.
+            </p>
+        </div>
+        <div class="block_one_comment">
+            <p class="name_and_adress"><strong>Марина</strong>, Киев</p>
+            <p class="text_comment">Компания ДЕЗСАН проводили фумигацию нашего деревянного дома. До обращения к ним, пробовали разными способами убрать жука в деревянных балках, проходил месяц и опять грызут.
+            Специалисты компании сработали на отлично, сделали фумигацию и наружную обработку. Прошел уже год, жука нет. Однозначно рекомендую ДЕЗСАН.
+            </p>
+        </div>
+        <div class="block_one_comment">
+            <p class="name_and_adress"><strong>Мирослав</strong>, п.Короповы Хутора</p>
+            <p class="text_comment">Пользовался услугами компании, заказывал в мае обработку от клещей, у меня две собаки, после прогулки по участку всегда с клещами возвращались.
+            После обработки никаких клещей!  Спасибо ребята, очень помогли!
+            </p>
+        </div>
+    </div>
+    <!-- КОНЕЦ -->
 
     
     <!-- Форма отправки имя/телефона/почты -->
@@ -359,7 +374,7 @@
                 </div>
             </div>
         <div class="row_bottom_footer mt-5">
-            <p class="row_bottom_footer__text">© 2021 Уничтожение насекомых и грызунов в квартирах и на загородных участках</p>
+            <p class="row_bottom_footer__text">© 2021 Уничтожение змей, насекомых и грызунов</p>
         </div>
     </footer>
     <!-- КОНЕЦ -->
