--- a/deratizaciya.html
+++ b/deratizaciya.html
@@ -52,12 +52,11 @@
                         <img src="img/logo.jpg" width="60px" height="60px" alt="Логотип сайта">
                         <span class="navbar-title" style="color:  rgb(255, 109, 0);" >ДЕЗСАН</span>
                     </a>
-
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedo" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
 
-                    <div class="collapse navbar-collapse navbar-collapse-without-width100" id="navbarSupportedContent">
+                    <div class="collapse navbar-collapse navbar-collapse-without-width100" id="navbarNav">
                         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                             <div class="dropdown">
                                 <a class="dropbtn nav-link dropdown-toggle nav-link-text" href="dezincekciya.html">Дезинсекция</a>
@@ -107,35 +106,6 @@
                             <li class="nav-item">
                                 <a class="nav-link nav-link-text" href="contacts.html">Контакты</a>
                             </li>
-                            <!-- <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle nav-link-text" href="dezincekciya.html" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Дезинсекция</a>
-                                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                    <li><a class="dropdown-item" href="dezincekciya/clop.html">Клопы</a></li>
-                                    <li><a class="dropdown-item" href="dezincekciya/tarakan.html">Тараканы</a></li>
-                                    <li><a class="dropdown-item" href="dezincekciya/komary.html">Комары</a></li>
-                                    <li><a class="dropdown-item" href="dezincekciya/osi.html">Осы</a></li>
-                                    <li><a class="dropdown-item" href="dezincekciya/kleshhi.html">Клещи</a></li>
-                                    <li><a class="dropdown-item" href="dezincekciya/bloh.html">Блохи</a></li>
-                                    <li><a class="dropdown-item" href="dezincekciya/muraviyi.html">Муравьи</a></li>
-                                    <li><a class="dropdown-item" href="dezincekciya/myhi.html">Мухи</a></li>
-                                </ul>
-                            </li>
-                            <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle nav-link-text" href="deratizaciya.html" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Дератизация</a>
-                                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                    <li><a class="dropdown-item" href="deratizaciya/krisa.html">Крысы</a></li>
-                                    <li><a class="dropdown-item" href="deratizaciya/krot.html">Кроты</a></li>
-                                    <li><a class="dropdown-item" href="deratizaciya/maus.html">Мыши</a></li>
-                                </ul>
-                            </li> 
-                            <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle nav-link-text" href="desinphekciya.html" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Дезинфекция</a>
-                                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                    <li><a class="dropdown-item" href="desinphekciya/grib.html">Грибы</a></li>
-                                    <li><a class="dropdown-item" href="desinphekciya/plesen.html">Плесень</a></li>
-                                    <li><a class="dropdown-item" href="desinphekciya/virus.html">Вирус</a></li>
-                                </ul>
-                            </li> -->
                         </ul>
                     </div>
 
@@ -594,7 +564,7 @@
                 </div>
             </div>
         <div class="row_bottom_footer mt-5">
-            <p class="row_bottom_footer__text">© 2021 Уничтожение насекомых и грызунов в квартирах и на загородных участках</p>
+            <p class="row_bottom_footer__text">© 2021 Уничтожение змей, насекомых и грызунов</p>
         </div>
     </footer>
     <!-- КОНЕЦ -->
