--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <!-- Bootstrap CSS -->
     
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <link rel="stylesheet" id="ao_optimized_gfonts" href="https://fonts.googleapis.com/css?family=Roboto:500&amp;display=swap">
     <link rel="stylesheet" href="css/style_for_all.css">
     <link rel="stylesheet" href="css/style_header.css">
@@ -50,12 +50,11 @@
                         <img src="img/logo.jpg" width="60px" height="60px" alt="Логотип сайта">
                         <span class="navbar-title" style="color:  rgb(255, 109, 0);" >ДЕЗСАН</span>
                     </a>
-
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedo" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
 
-                    <div class="collapse navbar-collapse navbar-collapse-without-width100" id="navbarSupportedContent">
+                    <div class="collapse navbar-collapse navbar-collapse-without-width100" id="navbarNav">
                         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                             <div class="dropdown">
                                 <a class="dropbtn nav-link dropdown-toggle nav-link-text" href="dezincekciya.html">Дезинсекция</a>
@@ -105,35 +104,6 @@
                             <li class="nav-item">
                                 <a class="nav-link nav-link-text" href="contacts.html">Контакты</a>
                             </li>
-                            <!-- <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle nav-link-text" href="dezincekciya.html" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Дезинсекция</a>
-                                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                    <li><a class="dropdown-item" href="dezincekciya/clop.html">Клопы</a></li>
-                                    <li><a class="dropdown-item" href="dezincekciya/tarakan.html">Тараканы</a></li>
-                                    <li><a class="dropdown-item" href="dezincekciya/komary.html">Комары</a></li>
-                                    <li><a class="dropdown-item" href="dezincekciya/osi.html">Осы</a></li>
-                                    <li><a class="dropdown-item" href="dezincekciya/kleshhi.html">Клещи</a></li>
-                                    <li><a class="dropdown-item" href="dezincekciya/bloh.html">Блохи</a></li>
-                                    <li><a class="dropdown-item" href="dezincekciya/muraviyi.html">Муравьи</a></li>
-                                    <li><a class="dropdown-item" href="dezincekciya/myhi.html">Мухи</a></li>
-                                </ul>
-                            </li>
-                            <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle nav-link-text" href="deratizaciya.html" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Дератизация</a>
-                                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                    <li><a class="dropdown-item" href="deratizaciya/krisa.html">Крысы</a></li>
-                                    <li><a class="dropdown-item" href="deratizaciya/krot.html">Кроты</a></li>
-                                    <li><a class="dropdown-item" href="deratizaciya/maus.html">Мыши</a></li>
-                                </ul>
-                            </li> 
-                            <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle nav-link-text" href="desinphekciya.html" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Дезинфекция</a>
-                                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                    <li><a class="dropdown-item" href="desinphekciya/grib.html">Грибы</a></li>
-                                    <li><a class="dropdown-item" href="desinphekciya/plesen.html">Плесень</a></li>
-                                    <li><a class="dropdown-item" href="desinphekciya/virus.html">Вирус</a></li>
-                                </ul>
-                            </li> -->
                         </ul>
                     </div>
 
@@ -214,7 +184,7 @@
         <div class="row align-item-center text-center">
             <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 text-center  m-auto">
                 <div class="one_card">
-                    <a href="">
+                    <a href="deserpentaciya/zmeeloff.html">
                         <div class="one_card__infa">
                             <div class="one_card__icon">
                                 <i class="fa"> 
@@ -230,7 +200,7 @@
             </div>
             <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 text-center  m-auto">
                 <div class="one_card">
-                    <a href="">
+                    <a href="dezincekciya/kleshhi.html">
                         <div class="one_card__infa">
                             <div class="one_card__icon">
                                 <i class="fa"> 
@@ -246,7 +216,7 @@
             </div>
             <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 text-center  m-auto">
                 <div class="one_card">
-                    <a href="">
+                    <a href="dezincekciya/komary.html">
                         <div class="one_card__infa">
                             <div class="one_card__icon">
                                 <i class="fa"> 
@@ -262,7 +232,7 @@
             </div>
             <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 text-center  m-auto">
                 <div class="one_card">
-                    <a href="">
+                    <a href="dezincekciya/tarakan.html">
                         <div class="one_card__infa">
                             <div class="one_card__icon">
                                 <i class="fa"> 
@@ -278,7 +248,7 @@
             </div>
             <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 text-center  m-auto">
                 <div class="one_card">
-                    <a href="">
+                    <a href="dezincekciya/clop.html">
                         <div class="one_card__infa">
                             <div class="one_card__icon">
                                 <i class="fa"> 
@@ -310,7 +280,7 @@
             </div>
             <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 text-center  m-auto">
                 <div class="one_card">
-                    <a href="">
+                    <a href="dezincekciya/osi.html">
                         <div class="one_card__infa">
                             <div class="one_card__icon">
                                 <i class="fa"> 
@@ -326,7 +296,7 @@
             </div>
             <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 text-center  m-auto">
                 <div class="one_card">
-                    <a href="">
+                    <a href="deratizaciya/maus.html">
                         <div class="one_card__infa">
                             <div class="one_card__icon">
                                 <i class="fa"> 
@@ -342,7 +312,7 @@
             </div> 
             <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 text-center  m-auto">
                 <div class="one_card">
-                    <a href="">
+                    <a href="dezincekciya.html">
                         <div class="one_card__infa">
                             <div class="one_card__icon">
                                 <i class="fa"> 
@@ -358,7 +328,7 @@
             </div>
             <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 text-center  m-auto">
                 <div class="one_card">
-                    <a href="">
+                    <a href="deratizaciya.html">
                         <div class="one_card__infa">
                             <div class="one_card__icon">
                                 <i class="fa"> 
@@ -374,7 +344,7 @@
             </div>
             <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 text-center  m-auto">
                 <div class="one_card">
-                    <a href="">
+                    <a href="desinphekciya.html">
                         <div class="one_card__infa">
                             <div class="one_card__icon">
                                 <i class="fa"> 
@@ -390,7 +360,7 @@
             </div>
             <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 text-center  m-auto">
                 <div class="one_card">
-                    <a href="">
+                    <a href="phymigaciya.html">
                         <div class="one_card__infa">
                             <div class="one_card__icon" style="position: relative;">
                                 <i class="fa"> 
@@ -406,7 +376,7 @@
             </div>
             <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 text-center  m-auto">
                 <div class="one_card">
-                    <a href="">
+                    <a href="deserpentaciya/zmeeloff.html">
                         <div class="one_card__infa">
                             <div class="one_card__icon">
                                 <i class="fa"> 
@@ -422,7 +392,7 @@
             </div>
             <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 text-center  m-auto">
                 <div class="one_card">
-                    <a href="">
+                    <a href="desinphekciya/grib.html">
                         <div class="one_card__infa">
                             <div class="one_card__icon">
                                 <i class="fa"> 
@@ -438,7 +408,7 @@
             </div>           
             <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 text-center">
                 <div class="one_card">
-                    <a href="">
+                    <a href="desinphekciya/plesen.html">
                         <div class="one_card__infa">
                             <div class="one_card__icon">
                                 <i class="fa"> 
@@ -454,7 +424,7 @@
             </div>
             <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 text-center  m-auto">
                 <div class="one_card">
-                    <a href="">
+                    <a href="deratizaciya/krot.html">
                         <div class="one_card__infa">
                             <div class="one_card__icon">
                                 <i class="fa"> 
@@ -468,6 +438,7 @@
                     </a>
                 </div>
             </div>
+            
         </div>
 
 
@@ -559,7 +530,6 @@
                 <p class="document_card_title">Дезинфекция транспортного средства</p>
                 <div class="hr"></div>
                 <p class="document_card_content">Обеззараживание и дезинфекция автосредства и оформление соответствующих документов.</p>   
-                <button class="btn btn-outline-danger own-create-btn">Подробнее...</button>
             </div>
             <div class="col-lg-3 col-md-4 document_card_block text-center">
                 <div class="document_card__blockimg">
@@ -568,7 +538,6 @@
                 <p class="document_card_title">Экозащита сельского хозяйства</p>
                 <div class="hr"></div>
                 <p class="document_card_content">Создаем современную экологическую защиту в сельско-хозяйственном и агро бизнесе</p>   
-                <button class="btn btn-outline-danger own-create-btn">Подробнее...</button>
             </div>
             <div class="col-lg-3 col-md-4 document_card_block text-center">
                 <div class="document_card__blockimg">
@@ -577,7 +546,6 @@
                 <p class="document_card_title">Документальное подтверждение выполнения работ</p>
                 <div class="hr"></div>
                 <p class="document_card_content">Оформление санитарных документов оперативно и официально.</p>   
-                <button class="btn btn-outline-danger own-create-btn third_button">Подробнее...</button>
             </div>
         </div>
     </div>
@@ -737,12 +705,10 @@
                 </div>
             </div>
         <div class="row_bottom_footer mt-5">
-            <p class="row_bottom_footer__text">© 2021 Уничтожение насекомых и грызунов в квартирах и на загородных участках</p>
+            <p class="row_bottom_footer__text">© 2021 Уничтожение змей, насекомых и грызунов</p>
         </div>
     </footer>
     <!-- КОНЕЦ -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
-    <!--<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.6.0/dist/umd/popper.min.js" integrity="sha384-KsvD1yqQ1/1+IA7gi3P0tyJcT3vR+NdBTt13hSJ2lnve8agRGXTTyNaBYmCR/Nwi" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.min.js" integrity="sha384-nsg8ua9HAw1y0W1btsyWgBklPnCUAFLuTMS2G72MMONqmOymq585AcH49TLBQObG" crossorigin="anonymous"></script>-->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
 </body>
 </html>
