--- a/for_home.html
+++ b/for_home.html
@@ -6,17 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="SHORTCUT ICON" href="img/dezodoracija.png" type="image/x-icon">
 
-    <title>Наши услуги</title>
+    <title>Квартира</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <link rel="stylesheet" id="ao_optimized_gfonts" href="https://fonts.googleapis.com/css?family=Roboto:500&amp;display=swap">
     <link rel="stylesheet" href="css/style_header.css">
     <link rel="stylesheet" href="css/style_for_all.css">
-    <link rel="stylesheet" href="css/style_main_on_the_page.css">
-    <link rel="stylesheet" href="css/style_content_on_main_page.css">
+    <link rel="stylesheet" href="css/style_enter_to_our_services_for_home.css">
+    <link rel="stylesheet" href="css/style_first_block_with_photo_and_send_form.css">
+    <link rel="stylesheet" href="css/style_enter_to_organization.css">
+    <link rel="stylesheet" href="css/style_content_on_main_page.css ">
+    <link rel="stylesheet" href="css/style_text_on_page_our_services_for_home.css">
     <link rel="stylesheet" href="css/style_send_form.css">
-    <link rel="stylesheet" href="css/style_send_white_form.css">
     <link rel="stylesheet" href="css/style_garantiya.css">
+    <link rel="stylesheet" href="css/style_pest-control.css">
     <link rel="stylesheet" href="css/style_footer.css">
 </head>
 <body>
@@ -77,11 +80,11 @@
                                 </div>
                             </div>
                             <div class="dropdown3">
-                                <a class="dropbtn3 nav-link dropdown-toggle nav-link-text" href="desinphekciya.html">Дезинфекция</a>
+                                <a class="dropbtn3 nav-link dropdown-toggle nav-link-text" href="our_services_for_home.html">Дезинфекция</a>
                                 <div class="dropdown-content3">
-                                    <a class="dropdown-item" href="desinphekciya/grib.html">Грибы</a>
-                                    <a class="dropdown-item" href="desinphekciya/plesen.html">Плесень</a>
-                                    <a class="dropdown-item" href="desinphekciya/virus.html">Вирус</a>
+                                    <a class="dropdown-item" href="our_services_for_home/grib.html">Грибы</a>
+                                    <a class="dropdown-item" href="our_services_for_home/plesen.html">Плесень</a>
+                                    <a class="dropdown-item" href="our_services_for_home/virus.html">Вирус</a>
                                 </div>
                             </div>
                             <div class="dropdown5">
@@ -112,9 +115,150 @@
     </div>
     <!-- КОНЕЦ -->
 
+    <!-- Блок с фото и формой после хедера -->
+    <!-- НАЧАЛО -->
+    <div class="container-fluid first_block__photo" style="background-image: url(img/d8-1024x624.jpg);">
+        <div class="container">
+            <div class="row first_block__container">
+                <div class="offset-lg-1 col-lg-6 col-md-7 first_block__text_container">
+                    <div class="first_block__text_content">
+                        <h1 class="first_block__main_text">Дезинсекция и дератизация в квартирах</h1>
+                        <ol class="first_block__list_with_text">
+                            <li>
+                                <span class="first_block__icon">&#10003;</span><span class="first_block__text">100% гарантия уничтожения насекомых </span>
+                            </li>
+                            <li>
+                                <span class="first_block__icon">&#10003;</span><span class="first_block__text">Индивидуальный план обработки для каждого объекта</span>
+                            </li>
+                            <li>
+                                <span class="first_block__icon">&#10003;</span><span class="first_block__text">Безопасность для вас, вашей семьи и питомцев - применяемые средства сертифицированы и не несут вреда людям и питомцам</span>
+                            </li>
+                            <li>
+                                <span class="first_block__icon">&#10003;</span><span class="first_block__text">Работаем круглосуточно, 7 дней в неделю</span>
+                            </li>
+                        </ol>
+                        <p class="text-center first_block__link"><a href="tel:+380503559950">+38(050)-355-99-50</a> | <a href="https://mail.google.com/mail/u/0/#inbox?compose=CllgCJNqtbnWrnmlTlNjMjcNkRXdjLBxZbMxbxWjdQsMXrLNKQHhLWLnxCcrbJSSCkCKPkHhCXB">dezsan.kh@gmail.com</a></p></div>
+                </div>
+                <div class="col-lg-4 col-md-5 first_block__send_form">
+                    <p class="send_form__main_text">Желаете задать вопрос?</p>
+                    <span class="send_form__text">Заполните форму и мы ответим при первой же возможности</span>
+                    <form class="send_form__form ">
+                        <input type="text" class="form-control send_form__input" placeholder="Имя" maxlength="100" aria-label="First name" required>
+                        <input type="number" class="form-control send_form__input" placeholder="Номер телефона для связи" maxlength="10" aria-label="Last name" required>
+                        <textarea type="text" class="form-control send_form__textarea" placeholder="Комментарий" maxlength="350" aria-label="Last name" required></textarea>
+                        <button class="btn btn-light own-create-btn send_form__button">Отправить</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- КОНЕЦ -->
+
+    <!-- Ввод -->
+    <!-- НАЧАЛО -->
+    <div class="container enter_to_our_services_for_home__container mt-4 mb-5">
+        <div class="enter_to_our_services_for_home__content">
+        </div>
+    </div>
+    <!-- КОНЕЦ -->
+    
     <!-- Форма отправки имя/телефона/почты -->
     <!-- НАЧАЛО -->
-    <div id="send_form" class="container-fluid pb-2 mb-5">
+    <div id="send_form" class="container-fluid pb-2">
+        <div class="container container_of_the_form">
+            <h4>Заполните форму и получите персональное предложение</h4>
+            <form action="">
+                <div class="row g-4">
+                    <div class="col-lg-3 col-md-4">
+                        <input type="text" class="form-control container_of_the_form__input" placeholder="Имя" aria-label="First name" required>
+                    </div>
+                    <div class="col-lg-3 col-md-4 m-auto mt-4">
+                        <input type="number" class="form-control container_of_the_form__input" placeholder="Номер телефона для связи" aria-label="Last name" required>
+                    </div>
+                    <div class="col-lg-3 col-md-4">
+                        <input type="text" class="form-control container_of_the_form__input" placeholder="Почта" aria-label="Last name" required>
+                    </div>
+                </div>
+                <div class="row">
+                    <button type="submit" class="d-block col-lg-2 btn btn-danger m-auto mt-4 mb-4 container_of_the_form_button">Отправить</button>
+                </div>
+            </form>
+        </div>
+    </div>
+    <!-- КОНЕЦ -->
+
+    <!-- Главное содержание страницы --> 
+    <!-- НАЧАЛО -->
+    <div class="container content-on-main-page">
+        <h1><strong>Дезинсекция и дератизация в квартирах<span></span></strong></h1>
+        <p class="description"><br>Уничтожаем навсегда грызунов и насекомых. Боремся с грибком и плесенью профессиональными методами. 
+        </p>
+    </div>
+    <div class="container">
+        <div class="row align-item-center text-center">
+            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 text-center  m-auto">
+                <div class="one_card">
+                    <a href="dezincekciya.html">
+                        <div class="one_card__infa">
+                            <div class="one_card__icon">
+                                <i class="fa"> 
+                                    <img src="img/dezinsekcija.png" alt=""> 
+                                </i>
+                            </div>
+                            <h3 class="one_card__title title_shadow">Дезинсекция</h3>
+                            <p class="one_card__content">Уничтожение всех видов паразитов в помещениях, на складах, подвалах. Недорого</p>
+                            <p class="one_card__link">Узнать больше...</p>
+                        </div>
+                    </a>
+                </div>
+            </div>
+            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 text-center  m-auto">
+                <div class="one_card">
+                    <a href="deratizaciya.html">
+                        <div class="one_card__infa">
+                            <div class="one_card__icon">
+                                <i class="fa"> 
+                                    <img src="img/deratacija.png" alt=""> 
+                                </i>
+                            </div>
+                            <h3 class="one_card__title title_shadow">Дератизация</h3>
+                            <p class="one_card__content">100% гарантия уничтожения мышей и крыс, а также следов их жизнедеятельности</p>
+                            <p class="one_card__link">Узнать больше...</p>
+                        </div>
+                    </a>
+                </div>
+            </div>
+            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 text-center  m-auto">
+                <div class="one_card">
+                    <a href="desinphekciya.html">
+                        <div class="one_card__infa">
+                            <div class="one_card__icon">
+                                <i class="fa"> 
+                                    <img src="img/dezinfekcija.png" alt=""> 
+                                </i>
+                            </div>
+                            <h3 class="one_card__title title_shadow">Дезинфекция</h3>
+                            <p class="one_card__content">Полное уничтожение плесени и грибка в помещении. 100% гарантия</p>
+                            <p class="one_card__link">Узнать больше...</p>
+                        </div>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- КОНЕЦ -->
+
+    <!-- Текст после менюшек -->
+    <!-- НАЧАЛО -->
+    <div class="container text_on_page_our_services_for_home__container">
+        <div class="text_on_page_our_services_for_home__content">
+        </div>
+    </div>
+    <!-- КОНЕЦ -->
+
+    <!-- Форма отправки имя/телефона/почты -->
+    <!-- НАЧАЛО -->
+    <div id="send_form" class="container-fluid pb-2">
         <div class="container container_of_the_form">
             <h4>Заполните форму и получите персональное предложение</h4>
             <div class="row g-4">
@@ -130,73 +274,6 @@
             </div>
             <div class="row">
                 <button type="submit" class="d-block col-lg-2 btn btn-danger m-auto mt-4 mb-4 container_of_the_form_button">Отправить</button>
-            </div>
-        </div>
-    </div>
-    <!-- КОНЕЦ -->
-
-    <!-- Контент страницы -->
-    <!-- НАЧАЛО -->
-    <div class="container-fluid our_services">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12 text-center h1">
-                    <span class="our_services__main_text">Уничтожение и выведение грызунов и насекомых</span>
-                </div>
-                <div class="offset-lg-3 col-lg-6 offset-md-2 col-md-7">
-                    <div class="hr"></div>
-                </div>
-                <div class="offset-lg-3 col-lg-6 offset-md-2 col-md-7 text-center">
-                    <p class="our_services__text">Мы - команда профессионалов с многолетним опытом работы в области дезинсекции, дератизации и медицинской дезинфекции</p>
-                </div>
-                <div class="col-md-4 col-sm-6 text-center m-auto">
-                    <div class="one_card">
-                        <a href="for_home.html">
-                            <div class="one_card__infa">
-                                <div class="one_card__icon">
-                                    <i class="fa"> 
-                                        <img src="img/home.png" style="position: relative; z-index: 2;" alt=""> 
-                                    </i>
-                                </div>
-                                <h3 class="one_card__title">для квартир</h3>
-                                <p class="one_card__content">Выведение насекомых, грызунов, плесени и грибка в квартирах</p>
-                                <p class="one_card__link">Узнать больше...</p>
-                            </div>
-                        </a>
-                    </div>
-                </div>
-                <div class="col-md-4 col-sm-6 text-center m-auto">
-                    <div class="one_card">
-                        <a href="for_country_home.html">
-                            <div class="one_card__infa">
-                                <div class="one_card__icon">
-                                    <i class="fa"> 
-                                        <img src="img/country.png" style="position: relative; z-index: 2;" alt=""> 
-                                    </i>
-                                </div>
-                                <h3 class="one_card__title">для загородных участков</h3>
-                                <p class="one_card__content">уничтожение вредителей на загородных участках</p>
-                                <p class="one_card__link">Узнать больше...</p>
-                            </div>
-                        </a>
-                    </div>
-                </div>
-                <div class="col-md-4 col-sm-6 text-center m-auto">
-                    <div class="one_card">
-                        <a href="for_office.html">
-                            <div class="one_card__infa">
-                                <div class="one_card__icon">
-                                    <i class="fa"> 
-                                        <img src="img/home.png" style="position: relative; z-index: 2;" alt=""> 
-                                    </i>
-                                </div>
-                                <h3 class="one_card__title">для организаций</h3>
-                                <p class="one_card__content">Услуги по дезинсекции, дератации, дезодорации для организаций. Все виды сандокументов. </p>
-                                <p class="one_card__link">Узнать больше...</p>
-                            </div>
-                        </a>
-                    </div>
-                </div>
             </div>
         </div>
     </div>
