--- a/for_organization.html
+++ b/for_organization.html
@@ -20,9 +20,22 @@
     <link rel="stylesheet" href="css/style_garantiya.css">
     <link rel="stylesheet" href="css/style_pest-control.css">
     <link rel="stylesheet" href="css/style_footer.css">
+    <link rel="stylesheet" href="css/style_scroll_to_up.css">
 
 </head>
 <body>
+
+    <!-- Кнопка вверх -->
+    <!-- НАЧАЛО -->
+    <a href="#" class="scrollup"><span>&#94;</span></a>
+    <!-- КОНЕЦ -->
+
+
+    <!-- Кнопка вверх -->
+    <!-- НАЧАЛО -->
+    <a href="#" class="scrollup"><span>&#94;</span></a>
+    <!-- КОНЕЦ -->
+
     <!-- Верхнее меню на странице с названием фирмы и навигацией -->
     <!-- НАЧАЛО -->
     <div class="container-fluid top_black_menu">
@@ -51,12 +64,11 @@
                         <img src="img/logo.jpg" width="60px" height="60px" alt="Логотип сайта">
                         <span class="navbar-title" style="color:  rgb(255, 109, 0);" >ДЕЗСАН</span>
                     </a>
-
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedo" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
 
-                    <div class="collapse navbar-collapse navbar-collapse-without-width100" id="navbarSupportedContent">
+                    <div class="collapse navbar-collapse navbar-collapse-without-width100" id="navbarNav">
                         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                             <div class="dropdown">
                                 <a class="dropbtn nav-link dropdown-toggle nav-link-text" href="dezincekciya.html">Дезинсекция</a>
@@ -228,7 +240,7 @@
         <div class="row align-item-center text-center">
             <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 text-center m-auto">
                 <div class="one_card">
-                    <a href="">
+                    <a href="desinphekciya.html">
                         <div class="one_card__infa">
                             <div class="one_card__icon">
                                 <i class="fa"> 
@@ -244,7 +256,7 @@
             </div>
             <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 text-center m-auto">
                 <div class="one_card">
-                    <a href="">
+                    <a href="deratizaciya.html">
                         <div class="one_card__infa">
                             <div class="one_card__icon">
                                 <i class="fa"> 
@@ -260,7 +272,7 @@
             </div>
             <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 text-center m-auto">
                 <div class="one_card">
-                    <a href="">
+                    <a href="dezincekciya.html">
                         <div class="one_card__infa">
                             <div class="one_card__icon">
                                 <i class="fa"> 
@@ -274,29 +286,13 @@
                     </a>
                 </div>
             </div>
-            <!-- <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 text-center m-auto">
-                <div class="one_card">
-                    <a href="">
-                        <div class="one_card__infa">
-                            <div class="one_card__icon">
-                                <i class="fa"> 
-                                    <img src="img/dezodoracija.png" alt=""> 
-                                </i>
-                            </div>
-                            <h3 class="one_card__title title_shadow">дезодорация</h3>
-                            <p class="one_card__content">Защита и обработка от змей.</p>
-                            <p class="one_card__link">Узнать больше...</p>
-                        </div>
-                    </a>
-                </div>
-            </div> -->
             <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 text-center m-auto">
                 <div class="one_card">
-                    <a href="">
+                    <a href="deserpentaciya.html">
                         <div class="one_card__infa">
                             <div class="one_card__icon">
                                 <i class="fa"> 
-                                    <img src="img/" alt=""> 
+                                    <img src="img/змеи.jpg" alt=""> 
                                 </i>
                             </div>
                             <h3 class="one_card__title title_shadow">десерпентация</h3>
@@ -308,7 +304,7 @@
             </div>
             <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 text-center m-auto">
                 <div class="one_card">
-                    <a href="">
+                    <a href="phymigaciya.html">
                         <div class="one_card__infa">
                             <div class="one_card__icon" style="position: relative;">
                                 <i class="fa"> 
@@ -439,7 +435,6 @@
                 <p class="document_card_title">Дезинфекция транспортного средства</p>
                 <div class="hr"></div>
                 <p class="document_card_content">Обеззараживание и дезинфекция автосредства и оформление соответствующих документов.</p>   
-                <button class="btn btn-outline-danger own-create-btn">Подробнее...</button>
             </div>
             <div class="col-lg-3 col-md-4 document_card_block text-center">
                 <div class="document_card__blockimg">
@@ -448,7 +443,6 @@
                 <p class="document_card_title">Экозащита сельского хозяйства</p>
                 <div class="hr"></div>
                 <p class="document_card_content">Создаем современную экологическую защиту в сельско-хозяйственном и агро бизнесе</p>   
-                <button class="btn btn-outline-danger own-create-btn">Подробнее...</button>
             </div>
             <div class="col-lg-3 col-md-4 document_card_block text-center">
                 <div class="document_card__blockimg">
@@ -457,7 +451,6 @@
                 <p class="document_card_title">Документальное подтверждение выполнения работ</p>
                 <div class="hr"></div>
                 <p class="document_card_content">Оформление санитарных документов оперативно и официально.</p>   
-                <button class="btn btn-outline-danger own-create-btn third_button">Подробнее...</button>
             </div>
         </div>
     </div>
@@ -617,7 +610,7 @@
                 </div>
             </div>
         <div class="row_bottom_footer mt-5">
-            <p class="row_bottom_footer__text">© 2021 Уничтожение насекомых и грызунов в квартирах и на загородных участках</p>
+            <p class="row_bottom_footer__text">© 2021 Уничтожение змей, насекомых и грызунов</p>
         </div>
     </footer>
     <!-- КОНЕЦ -->
@@ -625,5 +618,6 @@
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
+    <script src="js/scrollUp.js"></script>
 </body>
 </html>
