--- a/about_us.html
+++ b/about_us.html
@@ -16,8 +16,15 @@
     <link rel="stylesheet" href="css/style_send_form.css">
     <link rel="stylesheet" href="css/style_garantiya.css">
     <link rel="stylesheet" href="css/style_footer.css">
+    <link rel="stylesheet" href="css/style_scroll_to_up.css">
 </head>
 <body>
+
+    <!-- Кнопка вверх -->
+    <!-- НАЧАЛО -->
+    <a href="#" class="scrollup"><span>&#94;</span></a>
+    <!-- КОНЕЦ -->
+
 
     <!-- Верхнее меню на странице с названием фирмы и навигацией -->
     <!-- НАЧАЛО -->
@@ -47,12 +54,11 @@
                         <img src="img/logo.jpg" width="60px" height="60px" alt="Логотип сайта">
                         <span class="navbar-title" style="color:  rgb(255, 109, 0);" >ДЕЗСАН</span>
                     </a>
-
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedo" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
 
-                    <div class="collapse navbar-collapse navbar-collapse-without-width100" id="navbarSupportedContent">
+                    <div class="collapse navbar-collapse navbar-collapse-without-width100" id="navbarNav">
                         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                             <div class="dropdown">
                                 <a class="dropbtn nav-link dropdown-toggle nav-link-text" href="dezincekciya.html">Дезинсекция</a>
@@ -385,10 +391,11 @@
                 </div>
             </div>
         <div class="row_bottom_footer mt-5">
-            <p class="row_bottom_footer__text">© 2021 Уничтожение насекомых и грызунов в квартирах и на загородных участках</p>
+            <p class="row_bottom_footer__text">© 2021 Уничтожение змей, насекомых и грызунов</p>
         </div>
     </footer>
     <!-- КОНЕЦ -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
+    <script src="js/scrollUp.js"></script>
 </body>
 </html>
