--- a/comments.html
+++ b/comments.html
@@ -15,9 +15,18 @@
     <link rel="stylesheet" href="css/style_send_form.css">
     <link rel="stylesheet" href="css/style_garantiya.css">
     <link rel="stylesheet" href="css/style_footer.css">
+    <link rel="stylesheet" href="css/style_scroll_to_up.css">
+    <link rel="stylesheet" href="css/style_scroll_to_up.css">
+    <link rel="stylesheet" href="css/style_scroll_to_up.css">
     <link rel="stylesheet" href="css/style_comments.css">
 </head>
 <body>
+
+    <!-- Кнопка вверх -->
+    <!-- НАЧАЛО -->
+    <a href="#" class="scrollup"><span>&#94;</span></a>
+    <!-- КОНЕЦ -->
+
 
     <!-- Верхнее меню на странице с названием фирмы и навигацией -->
     <!-- НАЧАЛО -->
@@ -379,5 +388,6 @@
     </footer>
     <!-- КОНЕЦ -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
+    <script src="js/scrollUp.js"></script>
 </body>
 </html>
