--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <link rel="SHORTCUT ICON" href="img/dezodoracija.png" type="image/x-icon">
 
     <!-- Bootstrap CSS -->
-    
+
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <link rel="stylesheet" id="ao_optimized_gfonts" href="https://fonts.googleapis.com/css?family=Roboto:500&amp;display=swap">
     <link rel="stylesheet" href="css/style_for_all.css">
@@ -19,9 +20,22 @@
     <link rel="stylesheet" href="css/style_garantiya.css">
     <link rel="stylesheet" href="css/style_pest-control.css">
     <link rel="stylesheet" href="css/style_footer.css">
+    <link rel="stylesheet" href="css/style_scroll_to_up.css">
     <title>DEZSAN</title>
 </head>
 <body>
+
+    <!-- Кнопка вверх -->
+    <!-- НАЧАЛО -->
+    <a href="#" class="scrollup"><span>&#94;</span></a>
+    <!-- КОНЕЦ -->
+
+
+    <!-- Кнопка вверх -->
+    <!-- НАЧАЛО -->
+    <a href="#" class="scrollup"><span>&#94;</span></a>
+    <!-- КОНЕЦ -->
+
     <!-- Верхнее меню на странице с названием фирмы и навигацией -->
     <!-- НАЧАЛО -->
     <div class="container-fluid top_black_menu">
@@ -124,20 +138,20 @@
             </ol>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="img/index_photo1.jpg" class="d-block carousel_img w-100" alt="...">
+                    <img src="img/IMG_2487.jpeg" class="d-block carousel_img w-100" alt="...">
                     <!-- <div class="carousel-caption d-none d-md-block">
                         <h5>ПОЛНОЕ ИЗБАВЛЕНИЕ ОТ ВРЕДИТЕЛЕЙ!</h5>
                         <p>Быстро. Качественно. Надежно.</p>
                     </div> -->
                 </div>    
                 <div class="carousel-item">
-                    <img src="img/index_photo2.jpg" class="d-block carousel_img w-100" alt="...">
+                    <img src="img/IMG_2497.jpeg" class="d-block carousel_img w-100" alt="...">
                     <!-- <div class="carousel-caption d-none d-md-block">
                         <h5>Заботимся о Вашей безопасности</h5>
                     </div> -->
                 </div>
                 <div class="carousel-item">
-                    <img src="img/index_photo3.jpg" class="d-block carousel_img w-100" alt="...">
+                    <img src="img/IMG_2486.jpeg" class="d-block carousel_img w-100" alt="...">
                     <!-- <div class="carousel-caption d-none d-md-block">
                         <h5>Гарантируем результат!</h5>
                     </div> -->
@@ -456,7 +470,7 @@
                         <input type="text" class="form-control container_of_the_form__input" name="userName" placeholder="Имя" aria-label="First name" required>
                     </div>
                     <div class="col-lg-3 col-md-4 m-auto mt-4">
-                        <input type="number" class="form-control container_of_the_form__input" name="userPhone" placeholder="Номер телефона для связи" aria-label="Last name" required>
+                        <input type="number" class="form-control container_of_the_form__input" min="0" max="9999999999" name="userPhone" placeholder="Номер телефона для связи" aria-label="Last name" required>
                     </div>
                     <div class="col-lg-3 col-md-4">
                         <input type="text" class="form-control container_of_the_form__input" name="userEmail" placeholder="Почта" aria-label="Last name" required>
@@ -710,5 +724,6 @@
     </footer>
     <!-- КОНЕЦ -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
+    <script src="js/scrollUp.js"></script>
 </body>
 </html>
