--- a/test.html
+++ b/test.html
@@ -12,6 +12,18 @@
     <title>Hello, world!</title>
   </head>
   <body>
+
+    <!-- Кнопка вверх -->
+    <!-- НАЧАЛО -->
+    <a href="#" class="scrollup"><span>&#94;</span></a>
+    <!-- КОНЕЦ -->
+
+
+    <!-- Кнопка вверх -->
+    <!-- НАЧАЛО -->
+    <a href="#" class="scrollup"><span>&#94;</span></a>
+    <!-- КОНЕЦ -->
+
       <header>
         <div class="container-fluid white_menu container">
                 <nav class="navbar navbar-expand-lg navbar-light bg-white">
