--- a/deserpentaciya.html
+++ b/deserpentaciya.html
@@ -31,12 +31,6 @@
     <!-- КОНЕЦ -->
 
 
-    <!-- Кнопка вверх -->
-    <!-- НАЧАЛО -->
-    <a href="#" class="scrollup"><span>&#94;</span></a>
-    <!-- КОНЕЦ -->
-
-
     <!-- Верхнее меню на странице с названием фирмы и навигацией -->
     <!-- НАЧАЛО -->
     <div class="container-fluid top_black_menu">
@@ -71,7 +65,7 @@
 
                     <div class="collapse navbar-collapse navbar-collapse-without-width100" id="navbarNav">
                         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                            <div class="dropdown">nav-link dropdown-toggle nav-link-text" href="dezincekciya.html">Дезинсекция</a>
+                            <div class="dropdown nav-link dropdown-toggle nav-link-text" href="dezincekciya.html">Дезинсекция</a>
                                 <div class="dropdown-content">
                                     <a class="dropdown-item" href="dezincekciya/clop.html">Клопы</a>
                                     <a class="dropdown-item" href="dezincekciya/tarakan.html">Тараканы</a>
