--- a/deserpentaciya/zmeeloff.html
+++ b/deserpentaciya/zmeeloff.html
@@ -21,8 +21,21 @@
     <link rel="stylesheet" href="../css/style_garantiya.css">
     <link rel="stylesheet" href="../css/style_pest-control.css">
     <link rel="stylesheet" href="../css/style_footer.css">
+    <link rel="stylesheet" href="../css/style_scroll_to_up.css">
 </head>
 <body>
+
+    <!-- Кнопка вверх -->
+    <!-- НАЧАЛО -->
+    <a href="#" class="scrollup"><span>&#94;</span></a>
+    <!-- КОНЕЦ -->
+
+
+    <!-- Кнопка вверх -->
+    <!-- НАЧАЛО -->
+    <a href="#" class="scrollup"><span>&#94;</span></a>
+    <!-- КОНЕЦ -->
+
     <!-- Верхнее меню на странице с названием фирмы и навигацией -->
     <!-- НАЧАЛО -->
     <div class="container-fluid top_black_menu">
@@ -240,7 +253,7 @@
     <div class="container kill_zmeeloff_on_dacha__container mt-4">
         <div class="row kill_zmeeloff_on_dacha__content">
             <div class="offset-lg-1 col-lg-10 offset-md-1 col-md-10 kill_zmeeloff_on_dacha__block_main_text text-center">
-                <p class="kill_zmeeloff_on_dacha__main_text"><span style="color:red; font-weight: 800;">ZmeelOFF</span></p>
+                <p class="kill_zmeeloff_on_dacha__main_text"><span style="color:red; font-weight: 800;">Отпугиватель ZmeelOFF</span></p>
             </div>
             <div class="offset-lg-3 col-lg-6 text-center kill_zmeeloff_on_dacha__block_text mb-3">
                 
@@ -253,7 +266,7 @@
     <!-- НАЧАЛО -->
     <div class="container main_text_on_page_zmeeloff__container">
         <div class="main_text_on_page_zmeeloff__content">
-            <p class="text_on_page_zmeeloff__main_text">Инсектоакарицидное средство</p>
+            <p class="text_on_page_zmeeloff__main_text">Десерпентант</p>
             <div class="hr"></div>
             <p class="text_on_page_zmeeloff__text">Это препарат, создающий химический барьер для змей, препятствующий дальнейшему проникновению ползучих на  участок, делает обработанную территорию не комфортной для дальнейшего обитания змей.</p>
             <p class="text_on_page_zmeeloff__text">ZmeelOFF предназначен для использования в сфере дезинсекции, десерпентации на объектах различных категорий специалистами предприятий всех форм собственности, организаций, которые имеют право на проведение дезинсекционный, десерпентационных работ.</p>
@@ -504,12 +517,11 @@
                 </div>
             </div>
         <div class="row_bottom_footer mt-5">
-            <p class="row_bottom_footer__text">© 2021 Уничтожение насекомых и грызунов в квартирах и на загородных участках</p>
+            <p class="row_bottom_footer__text">© 2021 Уничтожение змей, насекомых и грызунов</p>
         </div>
     </footer>
     <!-- КОНЕЦ -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.6.0/dist/umd/popper.min.js" integrity="sha384-KsvD1yqQ1/1+IA7gi3P0tyJcT3vR+NdBTt13hSJ2lnve8agRGXTTyNaBYmCR/Nwi" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.min.js" integrity="sha384-nsg8ua9HAw1y0W1btsyWgBklPnCUAFLuTMS2G72MMONqmOymq585AcH49TLBQObG" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
+    <script src="../js/scrollUp.js"></script>
 </body>
 </html>
